--- a/VirtualApp/demoHookPlugin/build.gradle
+++ b/VirtualApp/demoHookPlugin/build.gradle
@@ -11,6 +11,11 @@ android {
         versionName "1.0"
 
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+        ndk {
+            // Specifies the ABI configurations of your native
+            // libraries Gradle should build and package with your APK.
+            abiFilters 'armeabi', 'armeabi-v7a', 'x86'
+        }
 
     }
     buildTypes {
@@ -20,6 +25,11 @@ android {
         }
     }
     productFlavors {
+    }
+    externalNativeBuild {
+        ndkBuild {
+            path 'src/main/jni/Android.mk'
+        }
     }
 }
 
