--- a/VirtualApp/YAHFA/build.gradle
+++ b/VirtualApp/YAHFA/build.gradle
@@ -12,7 +12,7 @@ android {
         ndk {
             // Specifies the ABI configurations of your native
             // libraries Gradle should build and package with your APK.
-            abiFilters 'armeabi', 'armeabi-v7a', 'x86'
+            abiFilters 'armeabi-v7a', 'x86'
         }
     }
     buildTypes {
