--- a/VirtualApp/demoHookPlugin/src/main/AndroidManifest.xml
+++ b/VirtualApp/demoHookPlugin/src/main/AndroidManifest.xml
@@ -5,6 +5,10 @@
     <application
         android:hasCode="false"
         android:label="@string/app_name">
+        <meta-data
+            android:name="yahfa.hook.plugin"
+            android:value="true"
+        />
 
     </application>
 
