--- a/VirtualApp/app/build.gradle
+++ b/VirtualApp/app/build.gradle
@@ -6,7 +6,7 @@ apply plugin: 'me.tatarka.retrolambda'
 
 android {
     compileSdkVersion 25
-    buildToolsVersion "25.0.2"
+    buildToolsVersion '26.0.0'
     defaultConfig {
         applicationId "io.virtualhook"
         minSdkVersion 21
